Added link to fogler book excerpt

--- a/4-ODE-integration.ipynb
+++ b/4-ODE-integration.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "source": [
     "# Example E5-6, Calculating X in a reactor with pressure drop\n",
-    "See page 183-188 in the textbook \"Essentials of Chemical Reaction Engineering\" by Fogler.\n",
+    "See page [183-188 in the textbook \"Essentials of Chemical Reaction Engineering\" by Fogler](.\n",
     "\n",
     "This time we have two variables to integrate (conversion $X$ and pressure ratio $y$), so our function must accept and return a vector. We integrate over weight of catalyst $W$, not time $t$.\n",
     "The differential equations are:\n",
