Some pandas stuff.

--- a/2016-10-17 importing data.ipynb
+++ b/2016-10-17 importing data.ipynb
@@ -367,13 +367,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('example.csv')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_csv('example.csv', index_col=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dogs = df.loc[df.index=='dog']\n",
+    "x, y = np.array(dogs['x']), np.array(dogs['y'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.64853597978622946"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats\n",
+    "scipy.stats.linregress(x,y).rvalue\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog 0.648535979786\n",
+      "cat 0.731102162819\n",
+      "fish 0.849689651038\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in ['dog','cat','fish']:\n",
+    "    pets = df.loc[df.index==animal]\n",
+    "    x, y = np.array(pets['x']), np.array(pets['y'])\n",
+    "    rvalue = scipy.stats.linregress(x,y).rvalue\n",
+    "    print(animal, rvalue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>x</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.648536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>y</th>\n",
+       "      <td>0.648536</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x         y\n",
+       "x  1.000000  0.648536\n",
+       "y  0.648536  1.000000"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dogs.corr()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog           x         y\n",
+      "x  1.000000  0.648536\n",
+      "y  0.648536  1.000000\n",
+      "cat           x         y\n",
+      "x  1.000000  0.731102\n",
+      "y  0.731102  1.000000\n",
+      "fish          x        y\n",
+      "x  1.00000  0.84969\n",
+      "y  0.84969  1.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in ['dog','cat','fish']:\n",
+    "    pets = df.loc[df.index==animal]\n",
+    "    print(animal,pets.corr())"
    ]
   },
   {
